# FileSync

./: .gitignore  CMakeLists.txt  clientconnection.cpp  clientconnection.h  manager.cpp  manager.h
Documentation/: ClientDatabaseModels.graffle
cmake/: FindProtobuf.cmake  FindQt4.cmake
proto/: fileshare.proto
src/: CMakeLists.txt
src/client/: CMakeLists.txt  clientconnection.cpp  clientconnection.h  main.cpp
src/common/: CMakeLists.txt  connection.cpp  connection.h  filesync.proto  prototools.h
src/server/: CMakeLists.txt  main.cpp  serverconnection.cpp  serverconnection.h
